[package]
name = "missing_encryption"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
openssl = { version = "0.10", features = ["v110"] }
chrono = { version = "0.4", features = ["serde"] }
